# video_collection_tools

./: .gitignore  CMakeLists.txt  README.md  config.json  decklink_stereo_gooviz.json  package.xml
.github/workflows/: cmake-multi-platform.yml
include/: gtk_stream_buf.h  video_controller.h  video_pipeline.h  video_preview.h
scripts/: set_data_directory.py  set_recording.py  start_recording.py  stop_recording.py  unset_recording.py
share/: decklink_stereo_gooviz.json  stereo_testsrc.json  testsrc.json  v4lsrc_rec_640x480_15Hz.json  video_recorder.schema.json
src/: frame_extractor.cpp  gtk_stream_buf.cpp  video_controller.cpp  video_pipeline.cpp  video_preview.cpp  video_recorder.cpp  video_recorder_node.cpp
