<?xml version="1.0"?>
<package format="3">
  <name>data_collection_tools</name>
  <version>0.1.0</version>
  <description>Video recorder and frame extractor tools for ROS2.</description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
